# bank_project

./: .coverage  .env  .env.sample  .gitignore  README.md  pyproject.toml
data/: test_data.xlsx
src/: convert_to_Py.py  decorators.py  external_api.py  finding.py  generators.py  main.py  masks.py  processing.py  trial.py  utils.py  widget.py
tests/: test_converter.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
